[gd_scene load_steps=13 format=3 uid="uid://cdeyd3l84hqp4"]

[ext_resource type="Script" path="res://object/npc/npc.gd" id="1_wfrk2"]
[ext_resource type="Texture2D" uid="uid://dtt18s8pme0fr" path="res://image/sprite/character/steps_empty.png" id="2_jf63p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a7xwk"]
size = Vector3(0.2, 0.32, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_mc7hp"]
size = Vector3(0.5, 0.4, 0.25)

[sub_resource type="Animation" id="Animation_13ofj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_i5uhr"]
resource_name = "fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_eh4xf"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_mrt0x"]
resource_name = "jump"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="Animation" id="Animation_goe7y"]
resource_name = "run_back"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_0ob6h"]
resource_name = "run_front"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_lp56j"]
resource_name = "run_side"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1kvp"]
_data = {
"RESET": SubResource("Animation_13ofj"),
"fall": SubResource("Animation_i5uhr"),
"idle": SubResource("Animation_eh4xf"),
"jump": SubResource("Animation_mrt0x"),
"run_back": SubResource("Animation_goe7y"),
"run_front": SubResource("Animation_0ob6h"),
"run_side": SubResource("Animation_lp56j")
}

[node name="Npc" type="CharacterBody3D"]
script = ExtResource("1_wfrk2")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
alpha_cut = 2
texture = ExtResource("2_jf63p")
hframes = 10
vframes = 3
frame = 3

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
shape = SubResource("BoxShape3D_a7xwk")

[node name="Interact" type="Area3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="Hitbox" type="CollisionShape3D" parent="Interact"]
shape = SubResource("BoxShape3D_mc7hp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
libraries = {
"": SubResource("AnimationLibrary_p1kvp")
}

[node name="NameDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Panel" type="Panel" parent="NameDisplay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.5
offset_right = 183.5
offset_bottom = 57.0
grow_horizontal = 2

[node name="Name" type="Label" parent="NameDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -358.0
offset_right = 183.0
offset_bottom = -305.0
grow_horizontal = 2
grow_vertical = 2
text = "I HOPE I HAVE A NAME SOON"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6

[node name="Panel" type="Panel" parent="TextBox"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -206.0
grow_horizontal = 2
grow_vertical = 0

[node name="Text" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -180.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "I HOPE I HAVE A TEXT WITH ME SOON"
autowrap_mode = 3

[node name="Voice" type="AudioStreamPlayer" parent="TextBox"]

[node name="Timer" type="Timer" parent="TextBox"]

[connection signal="body_entered" from="Interact" to="." method="_player_enter"]
[connection signal="body_exited" from="Interact" to="." method="_player_leave"]
[connection signal="timeout" from="TextBox/Timer" to="." method="_on_timer_timeout"]
